Stop the detail images from covering the page in the smaller view

--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -334,7 +334,12 @@ ul.categories li, ul.months li {
     text-align: center;
   }
 
-  img.detail, img.portrait  {
+  img.detail {
+    height: auto;
+    width: 100%;
+  }
+
+  img.portrait  {
     height: 100%;
     left: 0;
     position: absolute;
